Layout E4 (Paternal Parenting)

--- a/app/src/main/res/layout/activity_section_e3.xml
+++ b/app/src/main/res/layout/activity_section_e3.xml
@@ -104,8 +104,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:orientation="vertical"
-                android:layout_weight="1.5">
+                android:layout_weight="1.5"
+                android:orientation="vertical">
 
                 <CheckBox
                     android:id="@+id/ke302a"
@@ -268,49 +268,52 @@
                 android:text="@string/ke304"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@android:color/white" />
-<RadioGroup
-    android:id="@+id/ke304"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <RadioButton
-        android:id="@+id/ke304a"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-            <EditText
-                android:id="@+id/ke304m"
+
+            <RadioGroup
+                android:id="@+id/ke304"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:digits="0123456789"
-                android:hint="@string/months"
-                android:maxLength="2"
-                android:visibility="@{ke304a.isChecked()? View.VISIBLE : View.GONE}"/>
+                android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/ke304y"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:digits="0123456789"
-                android:hint="@string/years"
-                android:maxLength="2" />
+                <RadioButton
+                    android:id="@+id/ke304a"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-            <CheckBox
-                android:id="@+id/ke304d"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:text="@string/ke304d" />
+                <EditText
+                    android:id="@+id/ke304m"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:digits="0123456789"
+                    android:hint="@string/months"
+                    android:maxLength="2"
+                    android:visibility="@{ke304a.isChecked()? View.VISIBLE : View.GONE}" />
 
-            <CheckBox
-                android:id="@+id/ke30498"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:text="@string/dkn" />
+                <EditText
+                    android:id="@+id/ke304y"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:digits="0123456789"
+                    android:hint="@string/years"
+                    android:maxLength="2" />
+
+                <CheckBox
+                    android:id="@+id/ke304d"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:text="@string/ke304d" />
+
+                <CheckBox
+                    android:id="@+id/ke30498"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:text="@string/dkn" />
 
 
-</RadioGroup>
+            </RadioGroup>
 
             <!--ke305-->
             <TextView
