rdo group orientation

--- a/app/src/main/res/layout/activity_section_c3.xml
+++ b/app/src/main/res/layout/activity_section_c3.xml
@@ -1075,8 +1075,7 @@
                     android:background="#1ed61e"
                     android:onClick="@{() -> callback.BtnContinue()}"
                     android:text="@string/nextSection"
-                    android:textColor="@color/white"
-                    />
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
